--- a/index.html
+++ b/index.html
@@ -449,6 +449,52 @@
           <hr class="section-separator">
 
 
+
+
+      <h4 id="restful-web">REST API with RESTful Web Services (JAX-RS )</h4>
+
+      <p>You should learn what is REST API, what are the requirements and what are good and bad practices. When we make a request we receive HTML code as a response. We had to declare templates for view and with the help of JSP or Thymeleaf when we will fill those templates with a model they are converted to HTML pages and returned by controller. We can change it. We can just return raw data from our java application or <strong>JSON</strong> format. Use RESTful Web Services before creating with Spring. </p>
+
+      <table>
+        <tr>
+            <th colspan="4" class="course-title"> REST API with RESTful Web Services</th>
+        </tr>
+        <tr>
+          <th>RESTful Web Services Text Tutorial</th>
+          <th>RESTful Web Services Video Tutorial</th>
+        </tr>
+        <tr>
+          <td>Code Java</td>
+          <td>Code Java (YouTube)</td>
+        </tr>
+        <tr>
+          <td><a target="_blank" href="https://www.codejava.net/java-ee/web-services/java-restful-web-services-tutorial-for-beginner-with-jersey-and-tomcat">Link to Tutorial</a></td>
+          <td><a target="_blank" href="https://www.youtube.com/watch?v=N1UzS9ojuUY">Link to Video</a></td>
+        </tr>
+      </table> <br>
+
+
+      <hr>
+
+
+      <h4 id="restful-web-crud">REST Web Services API for CRUD Tutorial </h4>
+      <p>Practice creating a REST API that allows for crud operations.</p>
+    <table>
+        <th colspan="4" >REST Web Services CRUD API </th>
+      </tr>
+      <tr>
+        <td>Code Java</td>
+        <td>Code Java (YouTube)</td>
+      </tr>
+      <tr>
+        <td><a target="_blank" href="https://www.codejava.net/java-ee/web-services/java-crud-restful-web-services-examples-with-jersey-and-tomcat">Link to Tutorial</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=-_VPzhKJPfE">Link to Video</a></td>
+      </tr>
+    </table> <br>
+
+
+    <hr>
+
     <h4 id="spring-framework">Spring Framework</h4>
     <p>If you want to code in Java you should learn Spring. We initially used JavaEE (JSP, JDBC etc) which we used for web apps first. Now we can learn Spring where we'll see the difference between the two.</p>
         <p><strong>Spring Framework(Core)</strong> - You should definitely use Spring Boot but I think you should not start with it. Start with Spring Core.</p>
@@ -682,7 +728,7 @@
             <th>Company Employee Management</th>
           </tr>
           <tr>
-              <td>Kindson the tech pro <br><a target="_blank" href="https://www.kindsonthegenius.com/spring-boot/build-a-complete-spring-boot-application-from-the-scratch-step-by-step/">Spring Boot Security Authentication Walkthrough</a></td>
+              <td>Kindson the tech pro <br><a target="_blank" href="https://www.kindsonthegenius.com/spring-boot/build-a-complete-spring-boot-application-from-the-scratch-step-by-step/">Link to Walkthrough</a></td>
           </tr>
           <tr>
             <td><a target="_blank" href="https://www.youtube.com/playlist?list=PL9l1zUfnZkZkmDvzHCoLlc_nHBc7ZXiRO">Link to Playlist</a></td>
@@ -882,50 +928,6 @@
 
       <hr>
 
-
-      <h4 id="restful-web">REST API with RESTful Web Services (JAX-RS )</h4>
-
-      <p>You should learn what is REST API, what are the requirements and what are good and bad practices. When we make a request we receive HTML code as a response. We had to declare templates for view and with the help of JSP or Thymeleaf when we will fill those templates with a model they are converted to HTML pages and returned by controller. We can change it. We can just return raw data from our java application or <strong>JSON</strong> format. Using RESTful Web Services before creating with Spring. </p>
-
-      <table>
-        <tr>
-            <th colspan="4" class="course-title"> REST API with RESTful Web Services</th>
-        </tr>
-        <tr>
-          <th>RESTful Web Services Text Tutorial</th>
-          <th>RESTful Web Services Video Tutorial</th>
-        </tr>
-        <tr>
-          <td>Code Java</td>
-          <td>Code Java (YouTube)</td>
-        </tr>
-        <tr>
-          <td><a target="_blank" href="https://www.codejava.net/java-ee/web-services/java-restful-web-services-tutorial-for-beginner-with-jersey-and-tomcat">Link to Tutorial</a></td>
-          <td><a target="_blank" href="https://www.youtube.com/watch?v=N1UzS9ojuUY">Link to Video</a></td>
-        </tr>
-      </table> <br>
-
-
-      <hr>
-
-
-      <h4 id="restful-web-crud">REST Web Services API for CRUD Tutorial </h4>
-      <p>Practice creating a REST API that allows for crud operations.</p>
-    <table>
-        <th colspan="4" >REST Web Services CRUD API </th>
-      </tr>
-      <tr>
-        <td>Code Java</td>
-        <td>Code Java (YouTube)</td>
-      </tr>
-      <tr>
-        <td><a target="_blank" href="https://www.codejava.net/java-ee/web-services/java-crud-restful-web-services-examples-with-jersey-and-tomcat">Link to Tutorial</a></td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=-_VPzhKJPfE">Link to Video</a></td>
-      </tr>
-    </table> <br>
-
-
-    <hr>
 
 
     <h4 id="spring-rest">Spring Boot RESTful Web Services</h4>
