--- a/index.html
+++ b/index.html
@@ -305,14 +305,14 @@
             <th>MySQL Video Tutorial</th>
           </tr>
           <tr>
-            <td>w3schools</td>
+            <td>phptpoint</td>
             <td>Dr Daniel Soper (YouTube)</td>
             <td>DotNetTutorials</td>
             <td>Abhay Redkar ( (Youtube)</td>
 
           </tr>
           <tr>
-            <td><a target="_blank" href="https://www.w3schools.com/sql/default.asp">Link to Tutorial</a></td>
+            <td><a target="_blank" href="https://www.phptpoint.com/Database-Management-System-Tutorial/">Link to Tutorial</a></td>
             <td><a target="_blank" href="https://www.youtube.com/playlist?list=PL1LIXLIF50uXWJ9alDSXClzNCMynac38g">Link to Playlist</a></td>
             <td><a target="_blank" href="https://dotnettutorials.net/course/mysql-tutorials-for-beginners-and-professionals/">Link to Tutorial</a></td>
             <td><a target="_blank" href="https://www.youtube.com/watch?v=ER8oKX5myE0&t=3900s">Link to Video</a></td>
