--- a/index.html
+++ b/index.html
@@ -292,28 +292,40 @@
         <h4 id="databases">1.6 Databases</h4>
         <p>To have a dynamic site we need to have storage for our data so we could save this data and read it at any point in time. For this, we need to have a database and know how to connect to it. Make sure that you understand basic DB concepts like ACID, SQL vs NOSQL, transactions, secondary indexes, joins.</p>
        
-        <p><strong>MySQL</strong> - Choose one database type and learn the basics about it. I recommend choosing a relational database, either MySQL or Postgres. Common relational database common in job offers.</p>
-
+                <p><strong>Database Management Systems (DBMS)</strong> - Understand fundamental database design concepts.</p>
         <table>
           <tr>
-              <th colspan="4" class="course-title">Databases</th>
+              <th colspan="2" class="course-title">Database Management Systems (DBMS) Video Tutorial</th>
           </tr>
           <tr>
             <th>Databases Text Tutorial</th>
             <th>Database Management Systems (DBMS) Video Tutorial</th>
-            <th>MySQL Text Tutorial</th>
-            <th>MySQL Video Tutorial</th>
           </tr>
           <tr>
             <td>phptpoint</td>
             <td>Dr Daniel Soper (YouTube)</td>
-            <td>DotNetTutorials</td>
-            <td>FreeCodeCamp(Youtube)</td>
 
           </tr>
           <tr>
             <td><a target="_blank" href="https://www.phptpoint.com/Database-Management-System-Tutorial/">Link to Tutorial</a></td>
             <td><a target="_blank" href="https://www.youtube.com/playlist?list=PL1LIXLIF50uXWJ9alDSXClzNCMynac38g">Link to Playlist</a></td>
+          </tr>
+        </table> <br>
+    
+            <p><strong>MySQL</strong> - Choose one relational database and learn the basics of it, either MySQL or Postgres. Common relational database in job offers.</p>
+            <table>
+          <tr>
+              <th colspan="2" class="course-title">MySQL</th>
+          </tr>
+          <tr>
+            <th>MySQL Text Tutorial</th>
+            <th>MySQL Video Tutorial</th>
+          </tr>
+          <tr>
+            <td>DotNetTutorials</td>
+            <td>FreeCodeCamp(Youtube)</td>
+          </tr>
+          <tr>
             <td><a target="_blank" href="https://dotnettutorials.net/course/mysql-tutorials-for-beginners-and-professionals/">Link to Tutorial</a></td>
             <td><a target="_blank" href="https://www.youtube.com/watch?v=ER8oKX5myE0&t=3900s">Link to Video</a></td>
 
@@ -323,7 +335,7 @@
         <hr>
    
         <h4 id="mvc">1.7 MVC Pattern</h4>
-        <p>The main idea is that you separate data like blog posts (model) from view (HTML files) and have a controller that puts all these things together and outputs HTML files.  </p>
+        <p>The main idea is that you separate data from view and have a controller that puts all these things together and outputs HTML files.  </p>
         <p><strong>Model</strong> -It describes how your data looks like. It is a java class with all attributes that you will need.  </p>
         <p><strong>View</strong> -  The view is some kind of HTML but it doesn’t contain any data, it just describes how HTML file should look like. For View layer <strong>JSP and Thymeleaf  </strong>are most popular choices with the latter one being younger and more friendly to use. </p>
         <p><strong>Controller</strong> - This is some kind of coordinator, it receives requests, prepare data and join it with a view and as a result outputs a ready HTML file to the client</p>
