--- a/index.html
+++ b/index.html
@@ -395,11 +395,11 @@
               <th>Web Security Video Tutorial</th>
             </tr>
             <tr>
-              <td>w3 Schools</td>
+              <td>MDN</td>
               <td>Fireship (YouTube)</td>
             </tr>
             <tr>
-              <td><a target="_blank" href="https://www.w3schools.com/cybersecurity/index.php">Link to Tutorial</a></td>
+              <td><a target="_blank" href="https://developer.mozilla.org/en-US/docs/Learn/Server-side/First_steps/Website_security#summary">Link to Tutorial</a></td>
               <td><a target="_blank" href="https://www.youtube.com/watch?v=4YOpILi9Oxs">Link to Video</a></td>
             </tr>
           </table> <br>
