--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
           <tr>
             <th>Servlets Text Tutorial</th>
             <th>JSP Text Tutorial</th>
-            <th>JSP Video Tutorial</th>
+            <th>JSP & Servlets Video Tutorial</th>
           </tr>
           <tr>
             <td>dotnettutorials</td>
