--- a/index.html
+++ b/index.html
@@ -970,11 +970,11 @@
     </tr>
     <tr>
       <td>w3schools</td>
-      <td>edureka (YouTube)</td>
+      <td> Awais Mirza (YouTube)</td>
     </tr>
     <tr>
       <td><a target="_blank" href="https://www.w3schools.com/angular/">Link to Tutorial</a></td>
-      <td><a target="_blank" href="https://www.youtube.com/watch?v=88rSZG2mUYs">Link to Video</a></td>
+      <td><a target="_blank" href="https://www.youtube.com/watch?v=LA_v8isNp5E">Link to Video</a></td>
     </tr>
   </table> <br>
 
