--- a/index.html
+++ b/index.html
@@ -670,7 +670,7 @@
           </tr>
           <tr>
             <td>Auth0</td>
-            <td>Code Java (YouTube)</td>
+            <td>Java Brains (YouTube)</td>
           </tr>
           <tr>
             <td><a target="_blank" href="https://auth0.com/blog/spring-security-overview/">Link to Article</a></td>
