--- a/index.html
+++ b/index.html
@@ -825,15 +825,21 @@
           </tr>
           <tr>
             <th>Microservices Text Tutorial</th>
-            <th>Microservices Video Tutorial</th>
+             <th>Microservices Video Tutorial<br>Level 1</br></th>
+            <th>Microservices Video Tutorial<br>Level 2</br></th>
+            <th>Microservices Video Tutorial <br>Level 3</br></th>
+
           </tr>
           <tr>
             <td>JavaDevJournal</td>
-            <td>kindson the tech pro (YouTube)</td>
+            <td colspan="3"> Code Java (YouTube)</td>
           </tr>
           <tr>
             <td><a target="_blank" href="https://www.javadevjournal.com/spring-boot/microservices-with-spring-boot/">Link to Tutorial</a></td>
-            <td><a target="_blank" href="https://www.youtube.com/playlist?list=PL9l1zUfnZkZnW828ZmQBFTPCCoc5y6Ycg">Link to Playlist</a></td>
+            <td><a target="_blank" href="https://www.youtube.com/playlist?list=PLqq-6Pq4lTTZSKAFG6aCDVDP86Qx4lNas">Link to Playlist</a></td>
+            <td><a target="_blank" href="https://www.youtube.com/playlist?list=PLqq-6Pq4lTTbXZY_elyGv7IkKrfkSrX5e">Link to Playlist</a></td>
+            <td><a target="_blank" href="https://www.youtube.com/playlist?list=PLqq-6Pq4lTTaoaVoQVfRJPqvNTCjcTvJB">Link to Playlist</a></td>
+
           </tr>
         </table> <br>
 
@@ -866,18 +872,18 @@
         <h4 id="microservices-projects">3.5 Microservices Projects </h4>
         <p>Practice creating microservices with RabbitMQ messaging broker. Will be helpful for interviews.</p>
       <table>
-          <th>Microservices with Spring Boot </th>
+          <th>Health Care Information Services</th>
           <th>Online Shopping Application</th>
           <th>Payment Registration System</th>
 
         </tr>
         <tr>
-          <td>Tecno-Tab (YouTube)</td>
+           <td>kindson the tech pro (YouTube)</td>
           <td>Programming Technie (YouTube)</td>
           <td>Omniverse (YouTube)</td>
         </tr>
         <tr>
-          <td><a target="_blank" href="https://www.youtube.com/playlist?list=PLXXDXNrmlgEVMp_dPpVzWvylBAs52CxLw">Link to Playlist</a></td>
+           <td><a target="_blank" href="https://www.youtube.com/playlist?list=PL9l1zUfnZkZnW828ZmQBFTPCCoc5y6Ycg">Link to Playlist</a></td>
           <td><a target="_blank" href="https://www.youtube.com/playlist?list=PLSVW22jAG8pDY3lXXEv1hKVIAlnJ9nDN_">Link to Playlist</a></td>
           <td><a target="_blank" href="https://www.youtube.com/watch?v=7lM4uh_60Mc">Link to Video</a></td>
 
