--- a/index.html
+++ b/index.html
@@ -832,7 +832,7 @@
           </tr>
           <tr>
             <td>JavaDevJournal</td>
-            <td colspan="3"> Code Java (YouTube)</td>
+            <td colspan="3">Java Brains (YouTube)</td>
           </tr>
           <tr>
             <td><a target="_blank" href="https://www.javadevjournal.com/spring-boot/microservices-with-spring-boot/">Link to Tutorial</a></td>
