--- a/index.html
+++ b/index.html
@@ -192,8 +192,6 @@
               <th colspan="2" class="course-title">CSS</th>
               <th colspan="2" class="course-title">JavaScript</th>
 
-
-
           <tr>
               <th>HTML Text Tutorial</th>
               <th>HTML Video Tutorial</th>
@@ -754,11 +752,11 @@
           </tr>
           <tr>
             <td>w3schools</td>
-            <td>Nick White (YouTube)</td>
+            <td>Keep on Coding (YouTube)</td>
           </tr>
           <tr>
             <td><a target="_blank" href="https://www.w3schools.com/git/">Link to Tutorial</a></td>
-            <td><a target="_blank" href="https://www.youtube.com/watch?v=mJ-qvsxPHpY">Link to Video</a></td>
+            <td><a target="_blank" href="https://www.youtube.com/watch?v=XF99kTmS2gg">Link to Video</a></td>
           </tr>
         </table> <br>
 
