--- a/index.html
+++ b/index.html
@@ -56,8 +56,6 @@
       <li><a href="#fourth-app">3.11 Write 4th Java app (REST API + all learned technologies)</a></li>
       <li><a href="#additional-studies">Additional Studies</a></li>
 
-
-
     </ul>
 
     <hr class="section-separator">
@@ -134,7 +132,7 @@
             <th>Computer Networking Video Tutorial</th>
           </tr>
           <tr>
-            <td>Software Testing Helping</td>
+            <td>Software Testing Help</td>
             <td>Google Careers (Youtube)</td>
           </tr>
           <tr>
