--- a/index.html
+++ b/index.html
@@ -438,11 +438,11 @@
             </tr>
             <tr>
               <td>Apache Maven</td>
-              <td>DevOpsLearnEasy (YouTube)</td>
+              <td> Nikolay Panyukov (YouTube)</td>
             </tr>
             <tr>
               <td><a target="_blank" href="https://maven.apache.org/guides/getting-started/">Link to Tutorial</a></td>
-              <td><a target="_blank" href="https://www.youtube.com/playlist?list=PL55uMtDpag8rrOZ0LHFbtlPCfw4gIeIXw">Link to Playlist</a></td>
+              <td><a target="_blank" href="https://www.youtube.com/watch?v=bBqxC43ASsM">Link to Video</a></td>
             </tr>
           </table> <br>
 
