--- a/index.html
+++ b/index.html
@@ -781,11 +781,11 @@
           </tr>
           <tr>
             <td>Programiz</td>
-            <td>YouTube</td>
+            <td>BroCode (YouTube) </td>
           </tr>
           <tr>
             <td><a target="_blank" href="https://www.programiz.com/dsa">Link to Tutorial</a></td>
-            <td><a target="_blank" href="https://www.youtube.com/playlist?list=PLinmQqkccog1zIEryyh0rznjS63EmtDeS">Link to Playlist</a></td>
+            <td><a target="_blank" href="https://www.youtube.com/playlist?list=PLZPZq0r_RZON1eaqfafTnEexRzuHbfZX8">Link to Playlist</a></td>
           </tr>
         </table> <br>
         <p><strong>Design Patterns</strong>- Most of the mistakes and problems which developers encounter in their day to day job are very common and were already solved many years ago. Solutions to these problems are called Design Patterns. I think it’s good to first make some mistakes and then read design patterns to see what we did wrong. </p>
