--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@
             <th>Java Collections Video Tutorial</th>
           </tr>
           <tr>
-            <td>w3schools</td>
+            <td>University of Helsinki</td>
             <td>BroCode (YouTube)</td>
             <td>Java Guides</td>
             <td>Amigos Code (YouTube)</td>
 
           </tr>
           <tr>
-            <td><a target="_blank" href="https://www.w3schools.com/java/default.asp">Link to Tutorial</a></td>
+            <td><a target="_blank" href="https://java-programming.mooc.fi/">Link to Tutorial</a></td>
             <td><a target="_blank" href="https://www.youtube.com/playlist?list=PLZPZq0r_RZOMhCAyywfnYLlrjiVOkdAI1">Link to Videos</a></td>
             <td><a target="_blank" href="https://www.javaguides.net/p/java-collections-tutorial.html">Link to Tutorial</a></td>
             <td colspan="2"><a target="_blank" href="https://www.youtube.com/watch?v=8MmMm2-kJV8">Link to Video</a></td>
