--- a/index.html
+++ b/index.html
@@ -275,12 +275,12 @@
           <tr>
             <td>dotnettutorials</td>
             <td>dotnettutorials</td>
-            <td>Kody Simpson (YouTube)</td>
+            <td>Telusko (YouTube)</td>
           </tr>
           <tr>
             <td><a target="_blank" href="https://dotnettutorials.net/course/java-servlets-tutorials/">Link to Tutorial</a></td>
             <td><a target="_blank" href="https://dotnettutorials.net/lesson/java-server-pages/">Link to Tutorial</a></td>
-            <td><a target="_blank" href="https://www.youtube.com/playlist?list=PLfu_Bpi_zcDOn8ajnuLY6g1C6hc_eeDFl">Link to Playlist</a></td>
+            <td><a target="_blank" href="https://www.youtube.com/watch?v=OuBUUkQfBYM">Link to Video</a></td>
           </tr>
         </table> <br>
     
@@ -435,11 +435,11 @@
             </tr>
             <tr>
               <td>Apache Maven</td>
-              <td> ProogrammingTechie (YouTube)</td>
+              <td>Nikolay Panyukov(YouTube)</td>
             </tr>
             <tr>
               <td><a target="_blank" href="https://maven.apache.org/guides/getting-started/">Link to Tutorial</a></td>
-              <td><a target="_blank" href="https://www.youtube.com/watch?v=JhSBS2OpGdU">Link to Video</a></td>
+              <td><a target="_blank" href="https://www.youtube.com/watch?v=bBqxC43ASsM">Link to Video</a></td>
             </tr>
           </table> <br>
 
