--- a/index.html
+++ b/index.html
@@ -381,19 +381,23 @@
         <p>Now you need to connect from your java app to your database. For this purpose, you will have to use something called JDBC (Java DataBase Connectivity). Please read a little bit about it but I would not dive too deep into it. </p>
         <table>
           <tr>
-              <th colspan="4" class="course-title">JDBC</th>
+              <th colspan="3" class="course-title">JDBC</th>
           </tr>
           <tr>
             <th>JDBC Text Tutorial</th>
-            <th>JDBC + JBDC CRUD Video Tutorial</th>
+            <th>JDBC Video Tutorial</th>
+            <th>JDBC + CRUD Video Tutorial</th>
+
           </tr>
           <tr>
             <td>Code Java</td>
-            <th>Learn Programming Yourself</th>
+            <th>Code Java</th>
+            <th>Code Java</th>
           </tr>
           <tr>
             <td><a target="_blank" href="https://www.codejava.net/jdbc-tutorials">Link to Tutorials</a></td>
-            <td><a target="_blank" href="https://www.youtube.com/playlist?list=PLZTETldyguF1xVO4fxgWTQOP7fTR3ClYu">Link to Playlist</a></td>
+            <td><a target="_blank" href="https://www.youtube.com/watch?v=duEkh8ZsFGs">Link to Video</a></td>
+            <td><a target="_blank" href="https://www.youtube.com/watch?v=1pA64-foiz8">Link to Video</a></td>
           </tr>
         </table> <br>
 
