--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
           <tr>
             <td>Code Java</td>
             <th>Code Java</th>
-            <th>Code Java <br><a target="_blank" href="https://www.codejava.net/java-se/jdbc/jdbc-tutorial-sql-insert-select-update-and-delete-examples">Link to Walkthrough</a></th>              
+            <td>Code Java <br><a target="_blank" href="https://www.codejava.net/java-se/jdbc/jdbc-tutorial-sql-insert-select-update-and-delete-examples">Link to Walkthrough</a></td>              
           </tr>
           <tr>
             <td><a target="_blank" href="https://www.codejava.net/jdbc-tutorials">Link to Tutorials</a></td>
@@ -488,14 +488,19 @@
         <tr>
           <th>RESTful Web Services Text Tutorial</th>
           <th>RESTful Web Services Video Tutorial</th>
+          <th>RESTful Web Services CRUD Example Video Tutorial</th>
+            
         </tr>
         <tr>
           <td>Code Java</td>
-          <td>Code Java (YouTube)</td>
+          <td>Code Java</td>
+          <td>Code Java <br><a target="_blank" href="https://www.codejava.net/java-ee/web-services/java-crud-restful-web-services-examples-with-jersey-and-tomcat">Link to Walkthrough</a></td>              
+
         </tr>
         <tr>
           <td><a target="_blank" href="https://www.codejava.net/java-ee/web-services/java-restful-web-services-tutorial-for-beginner-with-jersey-and-tomcat">Link to Tutorial</a></td>
           <td><a target="_blank" href="https://www.youtube.com/watch?v=N1UzS9ojuUY">Link to Video</a></td>
+          <td><a target="_blank" href="https://www.youtube.com/watch?v=-_VPzhKJPfE">Link to Video</a></td>            
         </tr>
       </table> <br>
  
