--- a/index.html
+++ b/index.html
@@ -519,11 +519,11 @@
           </tr>
           <tr>
             <td>CodeJava</td>
-            <td>Kody Simpson (YouTube)</td>
+            <td>in28mins (YouTube)</td>
           </tr>
           <tr>
             <td><a target="_blank" href="https://www.codejava.net/frameworks/spring/understanding-the-core-of-spring-framework">Link to Tutorial</a></td>
-            <td><a target="_blank" href="https://www.youtube.com/playlist?list=PLfu_Bpi_zcDNbpxlrBl3Sng5F9qU7Cz5D">Link to Playlist</a></td>
+            <td><a target="_blank" href="https://www.youtube.com/watch?v=VdnFTjeAiJo">Link to Video</a></td>
           </tr>
         </table> <br>
 
