--- a/index.html
+++ b/index.html
@@ -538,11 +538,11 @@
           </tr>
           <tr>
             <td>Code Java</td>
-            <td>Telusko (YouTube)</td>
+            <td>Simplilearn (YouTube)</td>
           </tr>
           <tr>
             <td><a target="_blank" href="https://mail.codejava.net/frameworks/spring/understanding-spring-mvc">Link to Tutorial</a></td>
-            <td><a target="_blank" href="https://www.youtube.com/watch?v=g2b-NbR48Jo">Link to Video</a></td>
+            <td><a target="_blank" href="https://www.youtube.com/watch?v=EL8y9t4Rg0Y">Link to Video</a></td>
           </tr>
         </table> <br>
 
